--- a/WEBSITE/admin.html
+++ b/WEBSITE/admin.html
@@ -16,9 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-image: url(./LAB_3/photos/3.png); background-size: cover;">
+<body style="background-image: url(./../photos/3.png); background-size: cover;">
     <nav class="navbar">
-        <a class="navbar-brand mb-0 h1"><img src="./photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
     </nav>
     <div class="dropdown-menu">
         <form class="px-4 py-3">
