--- a/WEBSITE/main.html
+++ b/WEBSITE/main.html
@@ -19,7 +19,7 @@
 </head>
 <body style="background-color: rgb(190, 186, 186);">
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link bg-light" href="" style="margin:5px;color:black">Login</a>
@@ -31,7 +31,7 @@
     </nav>
     <div class="row">
         <div class="col-lg-6">
-            <img class="rounded" src="./LAB_3/photos/2.png" alt="" style="padding: 10px; width:650px;">
+            <img class="rounded" src="./../photos/2.png" alt="" style="padding: 10px; width:650px;">
         </div>
         <div class="col-lg-6">
             <p class="lead" style="padding: 50px;font-weight: 500;font-size: large;line-height:1.25;font-size: x-large;font-family: 'Montserrat',sans-serif;font-weight: bold; ">Ontime is the perfect piece of software to track and organize your organisation's attendance.It allows for smooth and pleasant storage of attendance information and is very fast and easy to use.</p>
@@ -43,7 +43,7 @@
             <p class="lead" style="padding: 50px;font-weight: 500;font-size: large;line-height:1.25;font-size: x-large;font-family: 'Montserrat',sans-serif;font-weight: bold; ">In these tough times of COVID 19 pandemic, we have added a new feature where the camera images can track instances where people were found without masks in the place of organization.</p>
         </div>
         <div class="col-lg-6">
-            <img class="rounded" src="./LAB_3/photos/4.png" style="width:600px;heigth:300px;" alt="">
+            <img class="rounded" src="./../photos/4.png" style="width:600px;heigth:300px;" alt="">
         </div>
 
     </div>
