--- a/WEBSITE/main.html
+++ b/WEBSITE/main.html
@@ -22,7 +22,7 @@
         <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
-            <a class="nav-link bg-light" href="" style="margin:5px;color:black">Login</a>
+            <a class="nav-link bg-light" href="./admin.html" style="margin:5px;color:black">Login</a>
         </li>
         <li class="nav-item">
             <a class="nav-link bg-light" href="" style="margin:5px;color: black;">About Us</a>
