changes in design

--- a/WEBSITE/registration.html
+++ b/WEBSITE/registration.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-image: url(../photos/bg1.jpg);background-size: cover;">
-    <nav class="navbar navbar-expand-lg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+<body style="background-image: url(../photos/leone-venter-VieM9BdZKFo-unsplash.jpg);background-size: cover;">
+    <nav class="navbar navbar-expand-lg-dark " data-bs-theme="dark">
+        <a class="navbar-brand mb-0 h1" style="color: black;"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70" >Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link " href="./admin.html" style="margin:5px;color:white;background-color:#3a6b7c;">Organisation Info</a>
@@ -29,8 +29,8 @@
         </li>
     </ul>
     </nav>
-      <div style= "margin-left: 10px;">
-        <form style="color:white">
+      <div style= "margin-left: 300px;">
+        <form style="color:black">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Organisation ID</label>
