--- a/WEBSITE/registration2.html
+++ b/WEBSITE/registration2.html
@@ -18,15 +18,15 @@
 
 
 </head>
-<body>
+<body style="background-image: url(./../photos/samantha-gades-BlIhVfXbi9s-unsplash.jpg);background-size: cover;background-position-y:-150px;">
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
         <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
-            <a class="nav-link bg-light" href="./admin.html" style="margin:5px;color:black">Organisation Info</a>
+            <a class="nav-link" href="./admin.html" style="margin:5px;color:whitesmoke;background-color: grey;">Organisation Info</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link bg-light" href="" style="margin:5px;color: black;">Attendance Settings</a>
+            <a class="nav-link" href="" style="margin:5px;color:whitesmoke;background-color: grey;">Attendance Settings</a>
         </li>
     </ul>
     </nav>
@@ -42,26 +42,26 @@
     <p class="display-10">Select normal working days for members of your organization</p>
     <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
         <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck1">Sunday</label>
+        <label class="btn btn-outline-secondary" for="btncheck1">Sunday</label>
         <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck2">Monday</label>
+        <label class="btn btn-outline-secondary" for="btncheck2">Monday</label>
         <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck3">Tuesday</label>
+        <label class="btn btn-outline-secondary" for="btncheck3">Tuesday</label>
         <input type="checkbox" class="btn-check" id="btncheck4" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck4">Wednesday</label>
+        <label class="btn btn-outline-secondary" for="btncheck4">Wednesday</label>
         <input type="checkbox" class="btn-check" id="btncheck5" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck5">Thursday</label>
+        <label class="btn btn-outline-secondary" for="btncheck5">Thursday</label>
       
         <input type="checkbox" class="btn-check" id="btncheck6" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck6">Friday</label>
+        <label class="btn btn-outline-secondary" for="btncheck6">Friday</label>
       
         <input type="checkbox" class="btn-check" id="btncheck7" autocomplete="off">
-        <label class="btn btn-outline-success" for="btncheck7">Saturday</label>
+        <label class="btn btn-outline-secondary" for="btncheck7">Saturday</label>
       </div>
     <h3 class="display-5">Image Upload</h3>
     <p class="display-10">Select image detection records which are to be maintained along with other data of a member.</p>
-    <div type="button" class="btn btn-outline-danger">Face Detection</div>
-    <div type="button" class="btn btn-outline-success">Face Mask Detection</div>
+    <div type="button" class="btn btn-outline-secondary">Face Detection</div>
+    <div type="button" class="btn btn-outline-secondary">Face Mask Detection</div>
     <br>
     <br>
     <div type="button" class="btn btn-secondary">Submit</div>
