--- a/WEBSITE/individual_member.html
+++ b/WEBSITE/individual_member.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
+<body style="background-image: url(../photos/dominik-schroder-FIKD9t5_5zQ-unsplash.jpg);background-size: cover;background-position-y: -180px;">
+    <nav class="navbar navbar-expand-lg-darknavbar-custom" data-bs-theme="dark">
         <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
@@ -35,11 +35,11 @@
             <div class="form-row">
                 <div class="form-group col">
                     <label for="inputEmail4">Member Name</label>
-                    <input type="text" class="form-control" id="inputEmail4" style="width:100%" placeholder="Email">
+                    <input type="text" class="form-control" id="inputEmail4" style="width:60%" placeholder="Email">
                 </div>
                 <div class="form-group col">
                     <label for="inputEmail4">Member Id</label>
-                    <input type="email" class="form-control" id="inputEmail4" style="width:100%" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail4" style="width:60%" placeholder="Email">
                 </div>
 
             </div>
@@ -49,11 +49,11 @@
             <div class="form-row">
                 <div class="form-group col">
                     <label for="inputEmail4">Organisation ID</label>
-                    <input type="text" class="form-control" id="inputEmail4" style="width:100%" placeholder="Email">
+                    <input type="text" class="form-control" id="inputEmail4" style="width:60%" placeholder="Email">
                 </div>
                 <div class="form-group col">
                     <label for="inputEmail4">Email ID</label>
-                    <input type="email" class="form-control" id="inputEmail4" style="width:100%" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail4" style="width:60%" placeholder="Email">
                 </div>
 
             </div>
