--- a/WEBSITE/admin.html
+++ b/WEBSITE/admin.html
@@ -18,7 +18,7 @@
 </head>
 <body style="background-image: url(./../photos/3.png); background-size: cover;">
     <nav class="navbar">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
     </nav>
     <!-- Section: Design Block -->
 <section class="background-radial-gradient overflow-hidden">
