--- a/WEBSITE/organisation_overview.html
+++ b/WEBSITE/organisation_overview.html
@@ -17,7 +17,7 @@
 </head>
 <body style="background-image: url(../photos/yuriy-kovalev-nN1HSDtKdlw-unsplash.jpg);background-size: cover;">
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70" style="border: radius 5px;;">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70" style="border: radius 5px;;">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link bg-light" href="./admin.html" style="margin:5px;color:black">LogOut</a>
