--- a/WEBSITE/attendance_update1.html
+++ b/WEBSITE/attendance_update1.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link bg-light" href="./admin.html" style="margin:5px;color:black">Organisation Info</a>
