--- a/WEBSITE/individual_member.html
+++ b/WEBSITE/individual_member.html
@@ -17,7 +17,7 @@
 </head>
 <body style="background-image: url(../photos/dominik-schroder-FIKD9t5_5zQ-unsplash.jpg);background-size: cover;background-position-y: -180px;">
     <nav class="navbar navbar-expand-lg-darknavbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link bg-light" href="./admin.html" style="margin:5px;color:black">Organisation Info</a>
