--- a/WEBSITE/main.html
+++ b/WEBSITE/main.html
@@ -19,7 +19,7 @@
 </head>
 <body style="background-color: rgb(190, 186, 186);">
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
             <li class="nav-item dropdown" >
                 <a class="nav-link bg-light dropdown-toggle" href="#" style="margin:5px;color: rgb(0, 0, 0);" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin:5px;color:black">Login</a>
