--- a/WEBSITE/registration.html
+++ b/WEBSITE/registration.html
@@ -19,7 +19,7 @@
 </head>
 <body style="background-image: url(../photos/leone-venter-VieM9BdZKFo-unsplash.jpg);background-size: cover;">
     <nav class="navbar navbar-expand-lg-dark " data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1" style="color: black;"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70" >Ontime.com</a>
+        <a class="navbar-brand mb-0 h1" style="color: black;"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70" >Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link " href="./admin.html" style="margin:5px;color:white;background-color:#3a6b7c;">Organisation Info</a>
