--- a/WEBSITE/registration2.html
+++ b/WEBSITE/registration2.html
@@ -20,7 +20,7 @@
 </head>
 <body style="background-image: url(./../photos/samantha-gades-BlIhVfXbi9s-unsplash.jpg);background-size: cover;background-position-y:-150px;">
     <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
-        <a class="navbar-brand mb-0 h1"><img src="./../../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
+        <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
         <li class="nav-item" >
             <a class="nav-link" href="./admin.html" style="margin:5px;color:whitesmoke;background-color: grey;">Organisation Info</a>
