--- a/WEBSITE/organisation_overview.html
+++ b/WEBSITE/organisation_overview.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-image: url(../photos/joshua-sortino-71vAb1FXB6g-unsplash.jpg);background-size:cover;background-position-y: -240px;background-position-x: 40px;">
+<body style="background-image: url(../photos/dose-media-bU6JyhSI6zo-unsplash.jpg);background-size:cover;background-position-y: -240px;background-position-x: 0px;">
     <nav class="navbar navbar-expand-lg-dark     navbar-custom" data-bs-theme="dark">
         <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70" style="border: radius 5px;;">Ontime.com</a>
         <ul class="nav justify-content-end">
@@ -65,8 +65,13 @@
             </div>
           </form>
           <br>
-          <p class="display-10">To upload attendance record of another day and address other
-            attendance related settings, click the button below.</p>
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="display-10">To upload attendance record of another day and address other
+                    attendance related settings, click the button below.</p>
+            </div>
+        </div>
+        
         <form action=""type="button"class="btn" style="background-color:#c8dcdd;">Attendance Settings</form>
     </div>
     
