--- a/WEBSITE/main.html
+++ b/WEBSITE/main.html
@@ -17,15 +17,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-color: rgb(190, 186, 186);">
-    <nav class="navbar navbar-expand-lg-dark bg-dark navbar-custom" data-bs-theme="dark">
+<body style="background-image: url(./../photos/annie-spratt-pKpipZVVEC0-unsplash.jpg);">
+    <nav class="navbar navbar-expand-lg-dark navbar-custom" data-bs-theme="dark">
         <a class="navbar-brand mb-0 h1"><img src="./../photos/discipline.png" alt="Ontime.img" width="70" height="70">Ontime.com</a>
         <ul class="nav justify-content-end">
             <li class="nav-item dropdown" >
                 <a class="nav-link bg-light dropdown-toggle" href="#" style="margin:5px;color: rgb(0, 0, 0);" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin:5px;color:black">Login</a>
                 <div class="dropdown-menu" aria-labelledby="loginDropdown">
-                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);">Admin</a>
-                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);">Member</a>
+                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);width:150px;">Admin</a>
+                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);width:150px">Member</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -35,7 +35,7 @@
     </nav>
     <div class="row">
         <div class="col-lg-6">
-            <img class="rounded" src="./../photos/2.png" alt="" style="padding: 10px; width:650px;">
+            <img class="rounded" src="./../photos/2-removebg-preview.png" alt="" style="padding: 10px; width:650px;">
         </div>
         <div class="col-lg-6">
             <p class="lead" style="padding: 50px;font-weight: 500;font-size: large;line-height:1.25;font-size: x-large;font-family: 'Montserrat',sans-serif;font-weight: bold; ">Ontime is the perfect piece of software to track and organize your organisation's attendance.It allows for smooth and pleasant storage of attendance information and is very fast and easy to use.</p>
@@ -47,7 +47,7 @@
             <p class="lead" style="padding: 50px;font-weight: 500;font-size: large;line-height:1.25;font-size: x-large;font-family: 'Montserrat',sans-serif;font-weight: bold; ">In these tough times of COVID 19 pandemic, we have added a new feature where the camera images can track instances where people were found without masks in the place of organization.</p>
         </div>
         <div class="col-lg-6">
-            <img class="rounded" src="./../photos/4.png" style="width:600px;height:300px;" alt="">
+            <img class="rounded" src="./../photos/4-removebg-preview.png" style="width:600px;height:300px;" alt="">
         </div>
 
     </div>
