--- a/WEBSITE/main.html
+++ b/WEBSITE/main.html
@@ -24,12 +24,12 @@
             <li class="nav-item dropdown" >
                 <a class="nav-link bg-light dropdown-toggle" href="#" style="margin:5px;color: rgb(0, 0, 0);" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin:5px;color:black">Login</a>
                 <div class="dropdown-menu" aria-labelledby="loginDropdown">
-                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);width:150px;">Admin</a>
-                  <a class="dropdown-item bg-light" href="#" style="margin:5px;color: rgb(0, 0, 0);width:150px">Member</a>
+                  <a class="dropdown-item bg-light" href="admin.html" style="margin:5px;color: rgb(0, 0, 0);width:150px;">Admin</a>
+                  <a class="dropdown-item bg-light" href="login.html" style="margin:5px;color: rgb(0, 0, 0);width:150px">Member</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link bg-light" href="" style="margin:5px;color: black;">About Us</a>
+                <a class="nav-link bg-light" href="AboutUs.html" style="margin:5px;color: black;">About Us</a>
             </li>
     </ul>
     </nav>
