--- a/WEBSITE/admin.html
+++ b/WEBSITE/admin.html
@@ -114,7 +114,7 @@
 
                 <!-- Submit button -->
                 <script src="./JAVASCRIPT/Admin.js"></script>
-                <button type="submit" onclick="redirectToNewPage()" class="btn btn-primary btn-block mb-4">
+                <button type="button" onclick="redirectToNewPage()" class="btn btn-primary btn-block mb-4">
                   Login
                 </button>
                 <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
