--- a/WEBSITE/attendance_update1.html
+++ b/WEBSITE/attendance_update1.html
@@ -63,7 +63,10 @@
     <div type="button" class="btn btn-outline-success">Face Mask Detection</div>
     <br>
     <br>
-    <div type="button" class="btn btn-secondary">Submit</div>
+    <div type="button" onclick="redirectToNewPage5()" class="btn btn-secondary">Submit</div>
+    <script>function redirectToNewPage5() {
+      window.location.href = "./organisation_overview.html"
+      alert("Updation Successful")}</script>
     
 </body>
 </html>
