--- a/WEBSITE/login.html
+++ b/WEBSITE/login.html
@@ -53,11 +53,13 @@
                         </div>
       
                         <div class="pt-1 mb-4">
-                          <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                          <button class="btn btn-dark btn-lg btn-block" onclick="redirectToNewPage6()" type="button">Login</button>
+                          <script>function redirectToNewPage6() {
+                            window.location.href = "./individual_member.html"}</script>
                         </div>
       
                         <a class="small text-muted" href="#!">Forgot password?</a>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="./admin.html"
+
                             style="color: #393f81;">Register here</a></p>
                         <a href="#!" class="small text-muted">Terms of use.</a>
                         <a href="#!" class="small text-muted">Privacy policy</a>
